Fix: Instructions button to fit on mobile properly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,6 @@ footer li {
   position: relative;
   padding: 5px;
 }
-
 /* End of Border Styling */
 
 .hidden {
@@ -116,9 +115,9 @@ footer li {
 
 #start-quiz-btn,
 #instructions-btn {
-  width: 40%;
-  margin: 5px auto 5px;
-  font-size: 25px;
+  width: 60%;
+  margin: 15px auto 15px;
+  font-size: 20px;
   display: block;
   box-sizing: content-box;
 }
